<resources>
    <string name="app_name">StorySubmission</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="prolog">Share your story now!</string>
    <string name="hi">Hello</string>
    <string name="username">Username</string>
    <string name="prolog_data">Complete the personal information below</string>
    <string name="login_success">Login Successful</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="created">Created</string>
    <string name="minimal_password">Password must be at least 8 characters</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="add_story">Add Story</string>
    <string name="permission">Permission Required</string>
    <string name="permission_message">The app requires camera permission. Please enable permissions in Settings.</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_location">Add Location</string>
    <string name="location_permission_message">Location Permission Required</string>
</resources>